milli/src/search/new/tests/snapshots/milli__search__new__tests__geo_sort__geo_sort-4.snap
---
source: milli/src/search/new/tests/geo_sort.rs
expression: "format!(\"{scores:#?}\")"
---
[
    [
        GeoSort(
            GeoSort {
                target_point: [
                    0.0,
                    0.0,
                ],
                ascending: false,
                value: Some(
                    [
                        6.0,
                        -5.0,
                    ],
                ),
            },
        ),
    ],
    [
        GeoSort(
            GeoSort {
                target_point: [
                    0.0,
                    0.0,
                ],
                ascending: false,
                value: Some(
                    [
                        3.0,
                        5.0,
                    ],
                ),
            },
        ),
    ],
    [
        GeoSort(
            GeoSort {
                target_point: [
                    0.0,
                    0.0,
                ],
                ascending: false,
                value: Some(
                    [
                        -2.0,
                        -2.0,
                    ],
                ),
            },
        ),
    ],
    [
        GeoSort(
            GeoSort {
                target_point: [
                    0.0,
                    0.0,
                ],
                ascending: false,
                value: Some(
                    [
                        2.0,
                        -1.0,
                    ],
                ),
            },
        ),
    ],
    [
        GeoSort(
            GeoSort {
                target_point: [
                    0.0,
                    0.0,
                ],
                ascending: false,
                value: Some(
                    [
                        1.0,
                        1.0,
                    ],
                ),
            },
        ),
    ],
    [
        GeoSort(
            GeoSort {
                target_point: [
                    0.0,
                    0.0,
                ],
                ascending: false,
                value: Some(
                    [
                        0.0,
                        0.0,
                    ],
                ),
            },
        ),
    ],
    [
        GeoSort(
            GeoSort {
                target_point: [
                    0.0,
                    0.0,
                ],
                ascending: false,
                value: None,
            },
        ),
    ],
    [
        GeoSort(
            GeoSort {
                target_point: [
                    0.0,
                    0.0,
                ],
                ascending: false,
                value: None,
            },
        ),
    ],
    [
        GeoSort(
            GeoSort {
                target_point: [
                    0.0,
                    0.0,
                ],
                ascending: false,
                value: None,
            },
        ),
    ],
    [
        GeoSort(
            GeoSort {
                target_point: [
                    0.0,
                    0.0,
                ],
                ascending: false,
                value: None,
            },
        ),
    ],
    [
        GeoSort(
            GeoSort {
                target_point: [
                    0.0,
                    0.0,
                ],
                ascending: false,
                value: None,
            },
        ),
    ],
]
